# memory-management

./: CMakeLists.txt  main.cpp
myclass/include/: MyClass.hpp
myclass/src/: MyClass.cpp
node/include/: node.hpp
node/src/: node.cpp
node2/include/: node2.hpp
node2/src/: node2.cpp
